<resources>
    <string name="app_name">BoomStream</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="search">Search</string>
    <string name="empty">Empty</string>
    <string name="title_activity_settings">Settings</string>
    <string name="network_fail">Network fail</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings">Settings</string>
    <string name="nav_projects">Projects</string>
    <string name="nav_title_app">App</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_title_exit">Exit</string>
    <string name="load_project">Load the project</string>
    <string name="media_play">Play</string>
    <string name="media_resolution">Resolution: %1$sx%2$s</string>
    <string name="media_duration">Duration: %s</string>
    <string name="media_mediastatus">MediaStatus: %s</string>
    <string name="media_quality">Quality: %s</string>
    <string name="no_apps">You have no applications able to perform this action</string>
    <string name="pick_video">Pick a video</string>
    <string name="record_video">Record a new video</string>
    <string name="nav_item_apikey">Api key</string>
    <string name="medias_name">Media\'s name</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="tmp_file_error">Temp file error</string>
    <string name="ftp_login">FTP login</string>
    <string name="ftp_error_connect_s">FTP connection error: %s</string>
    <string name="ftp_error_connect">FTP connection error</string>
    <string name="ftp_error_login_s">FTP login error: %s</string>
    <string name="ftp_error_login">FTP login error</string>
    <string name="ftp_ticket_uploading">Video uploading</string>
    <string name="ftp_ticket_uploaded">Video uploaded</string>
    <string name="ftp_ticket_upload_error">Video upload error</string>
    <string name="ftp_uploaded_s">Uploaded: %s</string>
    <string name="ftp_upload_error_s">Upload error: %s</string>
    <string name="ftp_uploading_s">Uploading: %s</string>
    <string name="try_again">Try again</string>
    <string name="tap_to_try_again">Tap to try again</string>
    <string name="no_ftp_login">No FTP login</string>
</resources>
