<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.atomofiron.boomstream.fragments.MediaFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:id="@+id/video_container">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/media_play"
                android:text="@string/media_play"
                />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/media_title"
            android:text="media_title"
            android:textStyle="bold"
            android:textSize="@dimen/text_large"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/media_resolution"
            android:text="@string/media_resolution"
            android:textSize="@dimen/text_middle"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/media_quality"
            android:text="@string/media_quality"
            android:textSize="@dimen/text_middle"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/media_duration"
            android:text="@string/media_duration"
            android:textSize="@dimen/text_middle"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/media_mediastatus"
            android:text="@string/media_mediastatus"
            android:textSize="@dimen/text_middle"
            />

    </LinearLayout>
</ScrollView>
